# bank-ops-analytics

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  Makefile  README.md  pyproject.toml  requierements.txt
.github/ISSUE_TEMPLATE/: issue_template.md
.github/ISSUE_TEMPLATE/.github/: pull_request_template.md
.github/workflows/: CONTRIBUTING.md  LICENSE  ci.yml
sql/: create_tables.sql
sql/sql/: analytics_queries.sql
sql/sql/tools/: sql_run.py
src/bankops/: db.py  etl.py
src/bankops/src/bankops/: kpis.py
src/bankops/src/bankops/R/: eda.R
src/bankops/src/bankops/src/bankops/: quality_checks.py
src/bankops/src/bankops/src/bankops/tests/: test_quality_checks.py
src/bankops/src/bankops/src/bankops/tests/tools/: generate_synthetic.py
src/bankops/src/bankops/tests/: test_kpis.py
